--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,24 @@
-# 汽修店记账软件依赖包
+# 汽车维修管理系统依赖包
+# 核心GUI库
+tkinter  # Python内置，通常不需要单独安装
 
-# 数据处理
-pandas>=1.3.0
-numpy>=1.21.0
+# 数据库
+# sqlite3  # Python内置
 
-# 报表生成（可选）
-reportlab>=3.6.0
+# 打包工具
+pyinstaller>=5.0
 
-# 日期时间处理
-python-dateutil>=2.8.0
+# 可选：如果需要更好的界面效果
+# tkinter.ttk  # Python内置
 
-# 数据验证（可选）
-cerberus>=1.3.0
+# 可选：如果需要生成报表
+# openpyxl>=3.0.0  # Excel文件处理
+# reportlab>=3.6.0  # PDF生成
 
-# 配置文件处理（可选）
-pyyaml>=5.4.0
+# 可选：如果需要图标处理
+# Pillow>=8.0.0  # 图像处理
 
-# 日志记录（可选）
-loguru>=0.6.0
-
-# 注意：
-# - tkinter 是Python内置模块，无需安装
-# - sqlite3 是Python内置模块，无需安装
-# - 本项目主要使用Python标准库，外部依赖较少
-# - 标记为"可选"的包可以根据需要安装
+# 开发和测试工具（可选）
+# pytest>=6.0.0
+# black>=21.0.0
+# flake8>=3.8.0
